# cpp-conan-docker-starter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml  entrypoint.sh
apps/: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
apps/poco/: CMakeLists.txt  main.cpp
apps/server/: CMakeLists.txt  main.cpp
examples/: asio.cpp  async_asio.cpp
include/math/: math.hpp
include/strings/: strings.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/main/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  math.cpp
src/strings/: CMakeLists.txt  strings.cpp
test/: CMakeLists.txt  main.cpp
test/core/: core_test.cpp
tests/: CMakeLists.txt
tests/math/: math_test.cpp
